src/test/deca/context/invalid/test_error_3.40-4.deca
// Description:
//    Soulève l'erreur (3.40) : le instanceof
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : les types "int" et "boolean" sont incompatibles (règle 3.40)
//
// Historique:
//      cree le 06/01/2022

class A {
}

{   
    boolean b;
    b = 1 instanceof A;
}

